# pomodoro2

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  storage.ts  supabase.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
