[package]
name = "pomodoro-app-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "pomodoro_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pomodoro-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
open = "5"
chrono = "0.4"
ureq = { version = "2", features = ["json"] }

[profile.release]
opt-level = "s"
strip = true
